<resources>
    <string name="app_name">Cuidatv3</string>
    <string name="cuidat">CuidaT</string>
    <string name="correo_electronico">Correo Electronico</string>
    <string name="contrase_a">Contraseña</string>
    <string name="entrar">Entrar</string>
    <string name="no_tienes_contrase_a">¿No tienes contraseña?</string>
    <string name="registrarse">registrarse</string>
    <string name="tabla_de_alimentos">Tabla de alimentos</string>
    <string name="calculadoras">Calculadoras</string>
    <string name="ejercicios">Ejercicios</string>
    <string name="frutas">Frutas</string>
    <string name="verduras">Verduras</string>
    <string name="carnes">Carnes</string>
    <!-- TODO: Remove or change this placeholder text -->
</resources>