<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_app"
    tools:context=".MainActivity">

    <!--Contenedor-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="10dp"
        tools:layout_editor_absoluteX="118dp"
        tools:layout_editor_absoluteY="251dp"
        tools:ignore="ExtraText">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:text="@string/cuidat"/>

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:src="@drawable/cuidat" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:text="@string/correo_electronico" />

        <EditText
            android:id="@+id/tv_UserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:layout_marginTop="5sp"
            android:autofillHints="Correo" />

        <TextView
            android:id="@+id/texview3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginTop="2sp"
            android:textColor="@color/black"
            android:text="@string/contrase_a" />

        <EditText
            android:id="@+id/tv_Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:layout_marginTop="5sp"
            android:autofillHints="Contraseña" />

        <Button
            android:id="@+id/Btn_Login"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/entrar" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:gravity="center"
            android:text="@string/no_tienes_contrase_a" />

        <Button
            android:id="@+id/Btn_SingUp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registrarse" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>