<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/back_tablaaalimentos"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.tabladealimentos.Fragment_TablaDeAlimentos">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="40sp"
        android:gravity="center"
        android:textColor="@color/black"
        android:textStyle="italic"
        android:layout_gravity="center"
        android:text="TABLA DE ALIMENTOS" />


    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:cardUseCompatPadding="true"
        android:id="@+id/Cardview_Frutas"
        app:cardCornerRadius="10dp"
        app:cardMaxElevation="20dp"
        android:layout_gravity="center_vertical|center_horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:layout_gravity="center"
                android:id="@+id/image_frutas"
                android:src="@drawable/frutas"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/frutas"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:layout_gravity="center"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/Cardview_Verduras"
        app:cardUseCompatPadding="true"
        app:cardCornerRadius="10dp"
        app:cardMaxElevation="20dp"
        android:layout_gravity="center_vertical|center_horizontal">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:id="@+id/image_verduras"
                android:layout_gravity="center"
                android:src="@drawable/verduras"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/verduras"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:layout_gravity="center"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/Cardview_Carnes"
        app:cardUseCompatPadding="true"
        app:cardCornerRadius="10dp"
        app:cardMaxElevation="20dp"
        android:layout_gravity="center_vertical|center_horizontal">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:id="@+id/image_carnes"
                android:layout_gravity="center"
                android:src="@drawable/carnesmenu"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/carnes"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:layout_gravity="center"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>